# toolkit

./: .env.example  .gitignore  README.md  pyproject.toml
docs/: relay.md
scripts/: claude-code
src/relay/: __main__.py  auth.py  config.py  main.py
src/relay/harnesses/: anthropic.py
src/relay/providers/: __init__.py  base.py  fireworks.py  registry.py
src/relay/transform/: anthropic_normalize.py
