[project]
name = "anthropic-relay"
version = "0.1.0"
description = "Modular local Anthropic-compatible relay for Fireworks and other providers"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "httpx>=0.28.0",
    "pydantic-settings>=2.6.0",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.8.0",
]

[project.scripts]
anthropic-relay = "relay.main:run"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/relay"]

[tool.hatch.build.targets.wheel.sources]
"src/relay" = "relay"
